Allow universal CORS origin patterns to eliminate Network Error on cloud deployment